--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
+    "json-server": "^0.14.0",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
