--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "background-server": "json-server db.json"
   },
   "dependencies": {
     "ant-design-vue": "^1.0.3",
+    "axios": "^0.18.0",
     "vue": "^2.5.17",
+    "vue-axios": "^2.1.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
